# about

./: .gitignore  CHANGES.md  README.md  pyproject.toml
.github/workflows/: release-pypi.yml  tests.yml
docs/: backlog.md  sandbox.md
etc/: litellm-config.yaml
llm/: README.md
src/content/blog/: digital-twins.md  shared-nothing-architecture-multi-model-databases-scalable-real-time-analytics.md
src/cratedb_about/: __init__.py  cli.py  core.py  model.py  util.py
src/cratedb_about/bundle/: llmstxt.py
src/cratedb_about/hub/: model.py
src/cratedb_about/instruction/: __init__.py  cratedb-instructions.md
src/cratedb_about/outline/: core.py  cratedb-outline.yaml  model.py
src/cratedb_about/prompt/: instructions.md
src/cratedb_about/query/: core.py  model.py
src/index/: cratedb-overview.md
tests/: conftest.py  test-outline.yaml  test_cli.py  test_instructions.py  test_outline.py  test_query.py  test_util.py
tests/assets/: outline.yaml
