[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "cratedb-about"
description = "Information about CrateDB, for humans and machines."
readme = "README.md"
keywords = [
  "cratedb",
  "knowledge base",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "CrateDB Engineering" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Archiving",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "cattrs[pyyaml]<26",
  "click<9",
  "colorlog<7",
  "hishel[httpx]>=1,<1.2",
  "llms-txt==0.0.4",
  "markdown<4",
  "platformdirs<5",
  "pueblo<0.1",
  "requests<3",
  "tiktoken<0.13",
]
optional-dependencies.all = [
  "cratedb-about[llm,manyio]",
]
optional-dependencies.develop = [
  "mypy<1.20",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "validate-pyproject<1",
]
optional-dependencies.llm = [
  "anthropic<0.79",
  "claudette<0.4",
  "openai<3",
]
optional-dependencies.manyio = [
  "pueblo[fileio]",
]
optional-dependencies.release = [
  "build<2",
  "twine<7",
]
optional-dependencies.test = [
  "pytest<10",
  "pytest-cov<8",
  "pytest-mock<4",
  "requests-mock<2",
]
urls.Changelog = "https://github.com/crate/about/blob/main/CHANGES.md"
urls.Issues = "https://github.com/crate/about/issues"
urls.Repository = "https://github.com/crate/about"
scripts.cratedb-about = "cratedb_about.cli:cli"

[tool.setuptools]
package-data.cratedb_about = [
  "**/*.md",
  "**/*.yaml",
]

[tool.ruff]
line-length = 100
extend-exclude = [  ]
lint.select = [
  # Bandit
  "S",
  # Bugbear
  "B",
  # Builtins
  "A",
  # comprehensions
  "C4",
  # eradicate
  "ERA",
  # flake8-2020
  "YTT",
  # isort
  "I",
  # pandas-vet
  "PD",
  # print
  "T20",
  # Pycodestyle
  "E",
  # Pyflakes
  "F",
  # return
  "RET",
  "W",
]
lint.per-file-ignores."tests/*" = [
  "S101", # Allow use of `assert`.
]

[tool.pytest]
ini_options.addopts = """
  -rfEXs -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
ini_options.minversion = "2.0"
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
ini_options.pythonpath = [
  "src",
]
ini_options.xfail_strict = true
ini_options.markers = [  ]

[tool.coverage]
paths.source = [
  "src/",
]
report.fail_under = 0
report.show_missing = true
report.exclude_lines = [
  "# pragma: no cover",
  "raise NotImplemented",
]
run.branch = false
run.omit = [
  "tests/*",
]

[tool.mypy]
mypy_path = "src"
packages = [
  "cratedb_about",
]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
non_interactive = true

# ===================
# Tasks configuration
# ===================
[tool.poe]
tasks.check = [
  "lint",
  "test",
]
tasks.format = [
  { cmd = "ruff format ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff format --check ." },
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*" },
]
tasks.test = { cmd = "pytest" }

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
